<resources>
    <string name="app_name">Canine</string>
    <string name="title_activity_main">Canine Music</string>
    <string name="back">Back</string>
    <string name="drawer">Drawer</string>

    <string name="title_activity_player">Player</string>
    <string name="no_time">0:00</string>
    <string name="previous_song">Previous Song</string>
    <string name="next_song">Next Song</string>
    <string name="play_pause">Play / Pause</string>
    <string name="album_art">Album</string>
    <string name="unknown_data">&lt;unknown&gt;</string>
    <string name="shuffle_state">Shuffle</string>
    <string name="repeat_state">Repeat</string>
    <string name="overflow">Overflow</string>
    <string name="plays">Plays</string>

    <string name="nav_id3">ID3 Tagger</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_ringtone">Ringtone</string>
    <string name="nav_import">Import</string>
    <string name="nav_share">Share</string>
    <string name="extra_items">EXTRA STUFF</string>
    <string name="nav_rate">Rate</string>
    <string name="nav_about">About us</string>
    <string name="pinned_items">PINNED ITEMS</string>
    <string name="pinned_info">What\'s this?</string>

    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="tracks">Tracks</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>

    <string name="grid_mode">Grid View</string>
    <string name="list_mode">List View</string>
    <string name="switch_views">Switch Views</string>

    <string name="action_settings">Settings</string>
    <string name="action_queue">Queue</string>

    <string name="title_activity_queue">Queue</string>

    <string name="alert_pinned_title">Pinned Items</string>
    <string name="alert_pinned_content">Pinned Items are Queues such as Albums, Playlists, or Artists that have been pinned for easy access.\n\nYou can add a Pinned Item by tapping the triple-dot ( &#8942; ) icon or long pressing an item and selecting \'Add to Pinned.\'</string>

    <string name="alert_permission_title">Permission Denied</string>
    <string name="alert_permission_content">Canine Music Player needs the Storage Permission to index your songs.</string>
</resources>
