<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@drawable/ripple_rectangle"
    android:clickable="true"
    android:onClick="chooseSong"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_art"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_album_unknown" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/song_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="16sp"
            android:text="@string/unknown_data"/>

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:minLines="1"
            android:scrollHorizontally="true"
            android:text="@string/unknown_data"
            android:textSize="12sp"/>

        </LinearLayout>

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:maxLines="1"
        android:minLines="1"
        android:text="@string/no_time"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"/>

    <ImageView
        android:id="@+id/overflow"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:adjustViewBounds="true"
        android:padding="8dp"
        android:background="@drawable/ic_overflow"
        android:clickable="true"
        android:contentDescription="@string/overflow"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ripple_oval" />

</LinearLayout>