<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="112dp"
    android:background="@color/notificationDark"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/noti_album_art"
        android:contentDescription="@string/album_art"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:srcCompat="@drawable/ic_album_unknown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noti_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="12dp"
                android:lines="1"
                android:textSize="18sp"
                android:text="@string/unknown_data"
                android:textColor="#ffffff"
                tools:text="Song Title" />

            <TextView
                android:id="@+id/noti_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="12dp"
                android:lines="1"
                android:text="@string/unknown_data"
                android:textColor="#ffffff"
                tools:text="Song Artist" />

            <ProgressBar
                android:id="@+id/noti_seekbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:layout_marginTop="4dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:progressTint="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/noti_prev_button"
                android:contentDescription="@string/previous_song"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:background="@drawable/ripple_rectangle_light"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_play_prev" />

            <ImageButton
                android:id="@+id/noti_pause_button"
                android:contentDescription="@string/play_pause"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:background="@drawable/ripple_rectangle_light"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_pause" />

            <ImageButton
                android:id="@+id/noti_next_button"
                android:contentDescription="@string/next_song"
                android:layout_weight="1"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:background="@drawable/ripple_rectangle_light"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_play_next" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
