<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:clipChildren="false">

    <include
        layout="@layout/player_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="?android:colorBackground"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_album"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-1dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="#FFFFFF"
        android:clipChildren="true"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

            <ImageButton
                android:id="@+id/button_shuffle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ripple_oval_dark"
                android:contentDescription="@string/shuffle_state"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintRight_toLeftOf="@+id/button_previous"
                app:srcCompat="@drawable/ic_shuffle_flat"/>

            <ImageButton
                android:id="@+id/button_previous"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_play_prev"
                android:clickable="true"
                android:contentDescription="@string/previous_song"
                android:elevation="4dp"
                android:onClick="previousSong"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintRight_toLeftOf="@+id/button_playpause"
                app:srcCompat="@drawable/ripple_oval_dark"/>

            <ImageButton
                android:id="@+id/button_playpause"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_pausecircle"
                android:clickable="true"
                android:contentDescription="@string/play_pause"
                android:elevation="4dp"
                android:onClick="togglePlaying"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ripple_oval_light"/>

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_play_next"
                android:clickable="true"
                android:contentDescription="@string/next_song"
                android:elevation="4dp"
                android:onClick="nextSong"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintLeft_toRightOf="@+id/button_playpause"
                app:srcCompat="@drawable/ripple_oval_dark"/>

            <ImageButton
                android:id="@+id/button_repeat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/ripple_oval_dark"
                android:contentDescription="@string/repeat_state"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintLeft_toRightOf="@+id/button_next"
                app:srcCompat="@mipmap/ic_repeat"/>

            <TextView
                android:id="@+id/current_time"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                android:text="@string/no_time"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <SeekBar
                android:id="@+id/song_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="4dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:layout_constraintBottom_toTopOf="@+id/button_playpause"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/current_time"
                app:layout_constraintRight_toLeftOf="@+id/song_duration"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/song_duration"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="11dp"
                android:text="@string/no_time"
                app:layout_constraintDimensionRatio="w,1:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>