<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/actionBarSize"
    android:id="@+id/main_actionbar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true"
    android:elevation="4dp">

    <LinearLayout
        android:layout_height="?attr/actionBarSize"
        android:layout_width="0dp"
        android:minHeight="?attr/actionBarSize"
        android:clickable="true"
        android:onClick="openPlayer"
        android:orientation="horizontal"
        android:background="@drawable/ripple_rectangle_light"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/open_drawer"
            android:contentDescription="@string/drawer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/ripple_oval_light"
            android:onClick="openDrawer"
            android:padding="6dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_hamburger"/>

        <ImageView
            android:id="@+id/current_albumart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/album_art"
            android:cropToPadding="true"
            android:scaleType="fitEnd"
            app:srcCompat="@mipmap/ic_logo_hq" />

        <LinearLayout
            android:id="@+id/playing_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="2dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/current_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/unknown_data"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/current_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/unknown_data"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_main"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="visible"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>